lab2/haskell/CPP/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from CPP/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp9 -> Exp9                               (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp4 -> Exp4                               (14)
	%start_pExp3 -> Exp3                               (15)
	%start_pExp2 -> Exp2                               (16)
	%start_pExp -> Exp                                 (17)
	%start_pExp1 -> Exp1                               (18)
	%start_pExp5 -> Exp5                               (19)
	%start_pExp6 -> Exp6                               (20)
	%start_pExp7 -> Exp7                               (21)
	%start_pExp10 -> Exp10                             (22)
	%start_pListExp -> ListExp                         (23)
	%start_pType -> Type                               (24)
	%start_pListId -> ListId                           (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	Id -> L_Id                                         (28)
	Program -> ListDef                                 (29)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (30)
	ListDef ->                                         (31)
	ListDef -> ListDef Def                             (32)
	Arg -> Type Id                                     (33)
	ListArg ->                                         (34)
	ListArg -> Arg                                     (35)
	ListArg -> Arg ',' ListArg                         (36)
	Stm -> Exp ';'                                     (37)
	Stm -> Type ListId ';'                             (38)
	Stm -> Type Id '=' Exp ';'                         (39)
	Stm -> 'return' Exp ';'                            (40)
	Stm -> 'while' '(' Exp ')' Stm                     (41)
	Stm -> '{' ListStm '}'                             (42)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (43)
	ListStm ->                                         (44)
	ListStm -> ListStm Stm                             (45)
	Exp15 -> 'true'                                    (46)
	Exp15 -> 'false'                                   (47)
	Exp15 -> Integer                                   (48)
	Exp15 -> Double                                    (49)
	Exp15 -> Id                                        (50)
	Exp15 -> '(' Exp ')'                               (51)
	Exp14 -> Id '(' ListExp ')'                        (52)
	Exp14 -> Id '++'                                   (53)
	Exp14 -> Id '--'                                   (54)
	Exp14 -> Exp15                                     (55)
	Exp13 -> '++' Id                                   (56)
	Exp13 -> '--' Id                                   (57)
	Exp13 -> Exp14                                     (58)
	Exp12 -> Exp12 '*' Exp13                           (59)
	Exp12 -> Exp12 '/' Exp13                           (60)
	Exp12 -> Exp13                                     (61)
	Exp11 -> Exp11 '+' Exp12                           (62)
	Exp11 -> Exp11 '-' Exp12                           (63)
	Exp11 -> Exp12                                     (64)
	Exp9 -> Exp10 '<' Exp10                            (65)
	Exp9 -> Exp10 '>' Exp10                            (66)
	Exp9 -> Exp10 '<=' Exp10                           (67)
	Exp9 -> Exp10 '>=' Exp10                           (68)
	Exp9 -> Exp10                                      (69)
	Exp8 -> Exp9 '==' Exp9                             (70)
	Exp8 -> Exp9 '!=' Exp9                             (71)
	Exp8 -> Exp9                                       (72)
	Exp4 -> Exp4 '&&' Exp5                             (73)
	Exp4 -> Exp5                                       (74)
	Exp3 -> Exp3 '||' Exp4                             (75)
	Exp3 -> Exp4                                       (76)
	Exp2 -> Id '=' Exp2                                (77)
	Exp2 -> Exp3                                       (78)
	Exp -> Exp1                                        (79)
	Exp1 -> Exp2                                       (80)
	Exp5 -> Exp6                                       (81)
	Exp6 -> Exp7                                       (82)
	Exp7 -> Exp8                                       (83)
	Exp10 -> Exp11                                     (84)
	ListExp ->                                         (85)
	ListExp -> Exp                                     (86)
	ListExp -> Exp ',' ListExp                         (87)
	Type -> 'bool'                                     (88)
	Type -> 'int'                                      (89)
	Type -> 'double'                                   (90)
	Type -> 'void'                                     (91)
	ListId -> Id                                       (92)
	ListId -> Id ',' ListId                            (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'bool'         { PT _ (TS _ 19) }
	'double'       { PT _ (TS _ 20) }
	'else'         { PT _ (TS _ 21) }
	'false'        { PT _ (TS _ 22) }
	'if'           { PT _ (TS _ 23) }
	'int'          { PT _ (TS _ 24) }
	'return'       { PT _ (TS _ 25) }
	'true'         { PT _ (TS _ 26) }
	'void'         { PT _ (TS _ 27) }
	'while'        { PT _ (TS _ 28) }
	'{'            { PT _ (TS _ 29) }
	'||'           { PT _ (TS _ 30) }
	'}'            { PT _ (TS _ 31) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp9    rule  12
	%start_pExp8    rule  13
	%start_pExp4    rule  14
	%start_pExp3    rule  15
	%start_pExp2    rule  16
	%start_pExp     rule  17
	%start_pExp1    rule  18
	%start_pExp5    rule  19
	%start_pExp6    rule  20
	%start_pExp7    rule  21
	%start_pExp10   rule  22
	%start_pListExp rule  23
	%start_pType    rule  24
	%start_pListId  rule  25
	Integer         rule  26
	Double          rule  27
	Id              rule  28
	Program         rule  29
	Def             rule  30
	ListDef         rules 31, 32
	Arg             rule  33
	ListArg         rules 34, 35, 36
	Stm             rules 37, 38, 39, 40, 41, 42, 43
	ListStm         rules 44, 45
	Exp15           rules 46, 47, 48, 49, 50, 51
	Exp14           rules 52, 53, 54, 55
	Exp13           rules 56, 57, 58
	Exp12           rules 59, 60, 61
	Exp11           rules 62, 63, 64
	Exp9            rules 65, 66, 67, 68, 69
	Exp8            rules 70, 71, 72
	Exp4            rules 73, 74
	Exp3            rules 75, 76
	Exp2            rules 77, 78
	Exp             rule  79
	Exp1            rule  80
	Exp5            rule  81
	Exp6            rule  82
	Exp7            rule  83
	Exp10           rule  84
	ListExp         rules 85, 86, 87
	Type            rules 88, 89, 90, 91
	ListId          rules 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 31
	'double'       reduce using rule 31
	'int'          reduce using rule 31
	'void'         reduce using rule 31
	%eof           reduce using rule 31

	Program        goto state 95
	ListDef        goto state 96

State 1


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'void'         shift, and enter state 35

	Def            goto state 93
	Type           goto state 94

State 2


	'bool'         reduce using rule 31
	'double'       reduce using rule 31
	'int'          reduce using rule 31
	'void'         reduce using rule 31
	%eof           reduce using rule 31

	ListDef        goto state 92

State 3


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'void'         shift, and enter state 35

	Arg            goto state 91
	Type           goto state 90

State 4


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'void'         shift, and enter state 35
	%eof           reduce using rule 34

	Arg            goto state 88
	ListArg        goto state 89
	Type           goto state 90

State 5


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 59
	'if'           shift, and enter state 84
	'int'          shift, and enter state 34
	'return'       shift, and enter state 85
	'true'         shift, and enter state 60
	'void'         shift, and enter state 35
	'while'        shift, and enter state 86
	'{'            shift, and enter state 87
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 38
	Stm            goto state 81
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp4           goto state 46
	Exp3           goto state 47
	Exp2           goto state 48
	Exp            goto state 82
	Exp1           goto state 50
	Exp5           goto state 51
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54
	Type           goto state 83

State 6


	'('            reduce using rule 44
	'++'           reduce using rule 44
	'--'           reduce using rule 44
	'bool'         reduce using rule 44
	'double'       reduce using rule 44
	'false'        reduce using rule 44
	'if'           reduce using rule 44
	'int'          reduce using rule 44
	'return'       reduce using rule 44
	'true'         reduce using rule 44
	'void'         reduce using rule 44
	'while'        reduce using rule 44
	'{'            reduce using rule 44
	L_integ        reduce using rule 44
	L_doubl        reduce using rule 44
	L_Id           reduce using rule 44
	%eof           reduce using rule 44

	ListStm        goto state 80

State 7


	'('            shift, and enter state 56
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 78
	Exp15          goto state 79

State 8


	'('            shift, and enter state 56
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 77

State 9


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 76

State 10


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 75

State 11


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 74

State 12


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 73
	Exp10          goto state 54

State 13


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 72
	Exp10          goto state 54

State 14


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp4           goto state 71
	Exp5           goto state 51
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54

State 15


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp4           goto state 46
	Exp3           goto state 70
	Exp5           goto state 51
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54

State 16


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 38
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp4           goto state 46
	Exp3           goto state 47
	Exp2           goto state 69
	Exp5           goto state 51
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54

State 17


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 38
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp4           goto state 46
	Exp3           goto state 47
	Exp2           goto state 48
	Exp            goto state 68
	Exp1           goto state 50
	Exp5           goto state 51
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54

State 18


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 38
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp4           goto state 46
	Exp3           goto state 47
	Exp2           goto state 48
	Exp1           goto state 67
	Exp5           goto state 51
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54

State 19


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp5           goto state 66
	Exp6           goto state 52
	Exp7           goto state 53
	Exp10          goto state 54

State 20


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp6           goto state 65
	Exp7           goto state 53
	Exp10          goto state 54

State 21


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp9           goto state 44
	Exp8           goto state 45
	Exp7           goto state 64
	Exp10          goto state 54

State 22


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30

	Integer        goto state 36
	Double         goto state 37
	Id             goto state 62
	Exp15          goto state 39
	Exp14          goto state 40
	Exp13          goto state 41
	Exp12          goto state 42
	Exp11          goto state 43
	Exp10          goto state 63

State 23


	'('            shift, and enter state 56
	'++'           shift, and enter state 57
	'--'           shift, and enter state 58
	'false'        shift, and enter state 59
	'true'         shift, and enter state 60
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 61
	L_Id           shift, and enter state 30
	%eof           reduce using rule 85
